testdata/baselines/reference/submodule/conformance/generatorOverloads3.errors.txt
error TS2318: Cannot find global type 'Array'.
error TS2318: Cannot find global type 'Function'.
error TS2318: Cannot find global type 'IArguments'.
error TS2318: Cannot find global type 'IterableIterator'.
error TS2318: Cannot find global type 'RegExp'.
error TS2318: Cannot find global type 'String'.
error TS2552: Cannot find name 'Boolean'. Did you mean 'boolean'?
error TS2552: Cannot find name 'Number'. Did you mean 'number'?
error TS2552: Cannot find name 'Object'. Did you mean 'object'?
generatorOverloads3.ts(2,5): error TS1222: An overload signature cannot be declared as a generator.
generatorOverloads3.ts(2,20): error TS2304: Cannot find name 'Iterable'.
generatorOverloads3.ts(3,5): error TS1222: An overload signature cannot be declared as a generator.
generatorOverloads3.ts(3,20): error TS2304: Cannot find name 'Iterable'.
generatorOverloads3.ts(4,17): error TS2304: Cannot find name 'Iterable'.


!!! error TS2318: Cannot find global type 'Array'.
!!! error TS2318: Cannot find global type 'Function'.
!!! error TS2318: Cannot find global type 'IArguments'.
!!! error TS2318: Cannot find global type 'IterableIterator'.
!!! error TS2318: Cannot find global type 'RegExp'.
!!! error TS2318: Cannot find global type 'String'.
!!! error TS2552: Cannot find name 'Boolean'. Did you mean 'boolean'?
!!! error TS2552: Cannot find name 'Number'. Did you mean 'number'?
!!! error TS2552: Cannot find name 'Object'. Did you mean 'object'?
==== generatorOverloads3.ts (5 errors) ====
    class C {
        *f(s: string): Iterable<any>;
        ~
!!! error TS1222: An overload signature cannot be declared as a generator.
                       ~~~~~~~~
!!! error TS2304: Cannot find name 'Iterable'.
        *f(s: number): Iterable<any>;
        ~
!!! error TS1222: An overload signature cannot be declared as a generator.
                       ~~~~~~~~
!!! error TS2304: Cannot find name 'Iterable'.
        *f(s: any): Iterable<any> { }
                    ~~~~~~~~
!!! error TS2304: Cannot find name 'Iterable'.
    }